fix: resolve hero section small screen design issues

--- a/src/shared/components/layout/Header/Header.module.css
+++ b/src/shared/components/layout/Header/Header.module.css
@@ -4,6 +4,11 @@
   font-size: 20px;
 
   @media (min-width: 768px) {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  @media (min-width: 1440px) {
     padding-top: 70px;
     padding-bottom: 70px;
   }
