--- a/src/shared/components/sections/HeroSection/HeroSection.module.css
+++ b/src/shared/components/sections/HeroSection/HeroSection.module.css
@@ -7,10 +7,15 @@
   padding-bottom: 40px;
   pointer-events: all;
 
-  @media (min-width: 1280px) {
-    min-height: calc(100vh - 160px);
+  @media (min-width: 768px) {
+    min-height: calc(100vh - 130px);
     justify-content: flex-end;
     padding-top: 0;
+    padding-bottom: 60px;
+  }
+
+  @media (min-width: 1440px) {
+    min-height: calc(100vh - 190px);
     padding-bottom: 100px;
   }
 }
@@ -49,6 +54,10 @@
 
 .columnRight {
   @media (min-width: 1280px) {
+    max-width: 320px;
+  }
+
+  @media (min-width: 1440px) {
     max-width: 420px;
   }
 
@@ -95,10 +104,13 @@
   position: relative;
   width: 100%;
   height: 55vh;
-  max-height: 720px;
-
+  max-height: 380px;
   transform: perspective(1000px) rotateX(var(--rotateX)) rotateY(var(--rotateY))
     translateZ(var(--translateZ));
+
+  @media (min-width: 1440px) {
+    max-height: 720px;
+  }
 }
 
 .imageContainer img {
